--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 
 script:
   - ng build --prod
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - echo "Wsf10690700119" | docker login -u "2072076689465" --password-stdin
   - docker build -t 2072076689465/runrun-angular:latest .
   - docker push 2072076689465/runrun-angular:latest
 
